# iWork-collab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  output.txt
3rd/libuv-1.52.1/: Untitled
doc/design/: iWork-collab.modelbase
include/: protocol.h
script/: gen-for-c.sh
src/: iWork-client.c  iWork-server.c  iWork-ws.c  iWork-ws.h  iw-client.c  iw-server.c  iw-ws.c  iw-ws.h  main.c
test/: hello.c  iWork-server-ping-test.c  iWork-server-prompt-test.c  iw-server-ping-test.c  iw-server-prompt-test.c  iw-test-coding.c  perf.c  perf.h
